Added stack view, changed constraints to the best condition

--- a/homeWork2.1.1/Base.lproj/Main.storyboard
+++ b/homeWork2.1.1/Base.lproj/Main.storyboard
@@ -17,15 +17,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ibF-4C-HFX">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ibF-4C-HFX">
                                 <rect key="frame" x="20" y="64" width="388" height="808"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jSg-D4-rHk">
-                                        <rect key="frame" x="0.0" y="0.0" width="388" height="399"/>
-                                        <color key="backgroundColor" red="0.4462050796" green="0.96411532160000002" blue="0.28998130560000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="388" height="394"/>
+                                        <color key="backgroundColor" red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rgf-b6-zN3">
-                                        <rect key="frame" x="0.0" y="409" width="388" height="399"/>
+                                        <rect key="frame" x="0.0" y="414" width="388" height="394"/>
                                         <color key="backgroundColor" systemColor="systemRedColor"/>
                                     </view>
                                 </subviews>
